Update decoded frame counts when the sink isn't running.

Fixes issues where this count is not updated until playback begins.

BUG=640046
TEST=updated unit test expectations.

Review-Url: https://codereview.chromium.org/2271423002
Cr-Commit-Position: refs/heads/master@{#414547}

Former-commit-id: 794b1f43e762214f89ecc2dbe3f063cde9354ff4